--- a/templates/contestant/edit.html.twig
+++ b/templates/contestant/edit.html.twig
@@ -1,14 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ title|trans }} - {{ "contestant.data.gender.#{ form.contestants.vars.prototype.gender.vars.value }"|trans }}{% endblock %}
+{% block title %}{{ "contestant.title.#{ cup }"|trans }} - {{ "contestant.data.gender.#{ gender }"|trans }}{% endblock %}
 
 {% block body %}
     <div class="container">
+        {%  set modificationsAllowed = is_granted('IS_IMPERSONATOR') or date(endDate, 'Europe/Paris') > date('now', 'Europe/Paris') %}
         {{ form_start(form, {'attr': {'id': 'contestants_form'}}) }}
         {{ form_row(form._token) }}
         <div class="p-5 mb-4 bg-light rounded-3">
-            <h1 class="display-4">{{ title|trans }} - {{ "contestant.data.gender.#{ form.contestants.vars.prototype.gender.vars.value }"|trans }}</h1>
+            <h1 class="display-4">{{ "contestant.title.#{ cup }"|trans }} - {{ "contestant.data.gender.#{ gender }"|trans }}</h1>
             <p class="lead">{{ 'contestant.description'|trans }}</p>
+            {% if modificationsAllowed %}
             <hr class="my-4">
             <div class="container">
                 <div class="row justify-content-sm-start">
@@ -23,13 +25,14 @@
                     </div>
                 </div>
             </div>
+            {% endif %}
             <hr class="my-4">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3" id="contestants" data-prototype="
 {{ '            <div class="card h-100 border-danger">
                     <div class="card-body pt-2 pb-3">
                         <div class="row">
                             <div class="col-auto me-auto">
-                                <h5 class="card-title mb-0">'|e }}{{ contestantTitle|trans }}{{ '</h5>
+                                <h5 class="card-title mb-0">'|e }}{{ "contestant.data.title.#{ gender }"|trans }}{{ '</h5>
                                 <small class="text-muted">'|e }}{{ 'contestant.data.first-name'|trans }}{{ '</small>
                             </div>
                             <div class="col-auto" id="buttons-go-here"></div>
@@ -58,12 +61,14 @@
                             <div class="card-body pt-2 pb-3">
                                 <div class="row">
                                     <div class="col-auto me-auto">
-                                        <h5 class="card-title mb-0">{{ contestantTitle|trans }}</h5>
+                                        <h5 class="card-title mb-0">{{ "contestant.data.title.#{ gender }"|trans }}</h5>
                                         <small
                                             class="text-muted">{{ 'contestant.data.first-name'|trans }}</small>
                                     </div>
                                     {{ form_widget(contestant.comment) }}
-                                    <div class="col-auto" id="buttons-go-here"></div>
+                                    <div class="col-auto" id="buttons-go-here">
+                                        <button class="btn btn-warning ms-1 {% if not modificationsAllowed %}disabled{% endif %}" type="button" data-bs-toggle="modal" data-bs-target="#moveModal" data-contestant-id="{{ contestant.vars.data.id }}"><i class="fa fa-exchange-alt"></i></button>
+                                    </div>
                                 </div>
                                 {{ form_widget(contestant.firstName) }}
                                 <small class="text-muted">{{ 'contestant.data.last-name'|trans }}</small>
@@ -81,12 +86,16 @@
                                 {{ form_widget(contestant.weightCategory) }}
                             </div>
                             <div class="card-footer border-success text-success">
+                                {% if contestant.vars.data.createdAt > date(deadline, 'Europe/Paris') %}
+                                <i class="fas fa-check-circle text-warning"></i> {{ 'contestant.status.late'|trans }}
+                                {% else %}
                                 <i class="fas fa-check-circle text-success"></i> {{ 'contestant.status.saved'|trans }}
+                                {% endif %}
                             </div>
                         </div>
                     </div>
                 {% endfor %}
-{#                {% if is_granted('IS_IMPERSONATOR') or date(deadline, 'Europe/Paris') > date('now', 'Europe/Paris') %}#}
+                {% if modificationsAllowed %}
                     <div class="col mb-4" id="add-new-contestant">
                         <div class="card h-100 text-center align-items-center">
                             <div class="card-body d-flex align-items-center">
@@ -96,8 +105,9 @@
                             </div>
                         </div>
                     </div>
-{#                {% endif %}#}
+                {% endif %}
             </div>
+            {% if modificationsAllowed %}
             <hr class="mb-4">
             <div class="container">
                 <div class="row justify-content-sm-start">
@@ -112,6 +122,7 @@
                     </div>
                 </div>
             </div>
+            {% endif %}
         </div>
         <div class="modal fade" id="commentModal" tabindex="-1" role="dialog" aria-labelledby="commentModalLabel">
             <div class="modal-dialog modal-dialog-centered">
@@ -142,14 +153,59 @@
                 </div>
             </div>
         </div>
+
+        <div class="modal fade" id="moveModal" tabindex="-1" role="dialog" aria-labelledby="moveModalLabel">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="moveModalLabel">
+                            {{ 'contestant.action.move.title'|trans }}
+                        </h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="move-select" class="col-form-label">
+                                    {{ 'contestant.action.move.to'|trans }}
+                                </label>
+                                <span style="display: none" id="move-contestant-id"></span>
+                                <select class="form-control" id="move-select">
+                                    <option value="{{ path('contestants_move', {id: "_id_", fromCup: "#{ cup }", fromGender: "#{ gender }", toCup: "messe", toGender: "female"}) }}">
+                                        {{ 'base.menu.contestant.messe'|trans }} {{ 'contestant.data.gender.female'|trans }}
+                                    </option>
+                                    <option value="{{ path('contestants_move', {id: "_id_", fromCup: "#{ cup }", fromGender: "#{ gender }", toCup: "messe", toGender: "male"}) }}">
+                                        {{ 'base.menu.contestant.messe'|trans }} {{ 'contestant.data.gender.male'|trans }}
+                                    </option>
+                                    <option value="{{ path('contestants_move', {id: "_id_", fromCup: "#{ cup }", fromGender: "#{ gender }", toCup: "ega", toGender: "female"}) }}">
+                                        {{ 'base.menu.contestant.ega'|trans }} {{ 'contestant.data.gender.female'|trans }}
+                                    </option>
+                                    <option value="{{ path('contestants_move', {id: "_id_", fromCup: "#{ cup }", fromGender: "#{ gender }", toCup: "ega", toGender: "male"}) }}">
+                                        {{ 'base.menu.contestant.ega'|trans }} {{ 'contestant.data.gender.male'|trans }}
+                                    </option>
+                                </select>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button id="modal-save" onclick="move()" type="button" class="btn btn-success"
+                                data-bs-dismiss="modal">
+                            {{ 'global.forms.button.save'|trans }}
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         {{ form_end(form, {'render_rest': false}) }}
     </div>
 {% endblock %}
 
 {% block javascript %}
+    {%  set modificationsAllowed = is_granted('IS_IMPERSONATOR') or date(endDate, 'Europe/Paris') > date('now', 'Europe/Paris') %}
     <script>
         let $collectionHolder;
-        let $removeFormButton = $('<button class="btn btn-danger ms-1" type="button"><i class="fa fa-trash" aria-hidden="true"></i></button>');
+        let $removeFormButton = $('<button class="btn btn-danger ms-1 {% if not modificationsAllowed %}disabled{% endif %}" type="button"><i class="fa fa-trash" aria-hidden="true"></i></button>');
         let $commentFormButton = $('<button class="btn btn-info" type="button" data-bs-toggle="modal" data-bs-target="#commentModal" data-comment=""><i class="fa fa-comment"></i></button>');
 
         let unsaved = false;
@@ -192,11 +248,11 @@
                 unsaved = false
             });
 
-            $("input").change(function () {
+            $(".card input").change(function () {
                 unsaved = true;
             });
 
-            $("select").change(function () {
+            $(".card select").change(function () {
                 unsaved = true;
             });
         });
@@ -266,6 +322,14 @@
             modal.find('.modal-body textarea').attr('data-id', id);
         });
 
+        $('#moveModal').on('show.bs.modal', function (event) {
+            let button = $(event.relatedTarget); // Button that triggered the modal
+            let contestantId = button.attr('data-contestant-id'); // Extract info from data-* attributes
+
+            let modal = $(this);
+            modal.find('#move-contestant-id').text(contestantId);
+        });
+
         function save() {
             let commentTextArea = $("#comment-textarea");
             let comment = commentTextArea.val();
@@ -278,6 +342,17 @@
                 $button.removeClass('btn-info').addClass('btn-success');
             $button.attr('data-comment', comment);
             $('#' + id).attr('value', comment);
+        }
+
+        function move() {
+            let moveSelect = $("#move-select");
+            let selectedTargetPath = moveSelect.find(":selected").val();
+
+            let contestantId = $("#move-contestant-id")
+
+            let redirectUrl = selectedTargetPath.replace("_id_", contestantId.text())
+            console.log(redirectUrl)
+            window.location.href = redirectUrl
         }
     </script>
 {% endblock %}
