--- a/templates/contestant/edit.html.twig
+++ b/templates/contestant/edit.html.twig
@@ -229,6 +229,7 @@
             $addTagLink.on('click', function (e) {
                 // prevent the link from creating a "#" on the URL
                 e.preventDefault();
+                unsaved = true;
 
                 // add a new tag form (see code block below)
                 addTagForm($collectionHolder, $addTagLink);
