add description to contestant overview at index page

--- a/templates/welcome/anonymous.html.twig
+++ b/templates/welcome/anonymous.html.twig
@@ -18,7 +18,7 @@
                 {% endfor %}
             </figure>
             <hr class="my-4">
-            <p>{{ 'welcome.overview.contestant.description'|trans({'total':categories['total'],'clubs':clubsCount})|raw }}</p>
+            <p>{{ 'welcome.overview.contestant.description.anonymous'|trans({'total':categories['total'],'clubs':clubsCount})|raw }}</p>
             <div class="row row-cols-1 row-cols-md-2 row-cols-xxl-4 g-3">
                 <div class="col">
                     <div class="card">
