--- a/templates/welcome/index.html.twig
+++ b/templates/welcome/index.html.twig
@@ -16,6 +16,7 @@
                 {{ 'welcome.overview.send-invoice'|trans }}
             </a>
             <hr class="my-4">
+            {{ 'welcome.overview.contestant.index'|trans }}
             <div class="row row-cols-1 row-cols-md-2">
                 <div class="col">
                     <div class="card">
